INCLUDE_DIRECTORIES (
    ${STAR_EXTERN_INCLUDES}
    ${STAR_CORE_INCLUDES}
    ${STAR_BASE_INCLUDES}
    ${STAR_GAME_INCLUDES}
    ${STAR_PLATFORM_INCLUDES}
    ${STAR_APPLICATION_INCLUDES}
    ${STAR_RENDERING_INCLUDES}
    ${STAR_WINDOWING_INCLUDES}
    ${STAR_FRONTEND_INCLUDES}
  )

SET (star_frontend_HEADERS
    StarActionBar.hpp
    StarAiInterface.hpp
    StarBaseScriptPane.hpp
    StarBindingsMenu.hpp
    StarBookmarkInterface.hpp
    StarChat.hpp
    StarCharCreation.hpp
    StarCharSelection.hpp
    StarChatBubbleSeparation.hpp
    StarChatBubbleManager.hpp
    StarCinematic.hpp
    StarClientCommandProcessor.hpp
    StarCodexInterface.hpp
    StarConfirmationDialog.hpp
    StarContainerInterface.hpp
    StarContainerInteractor.hpp
    StarCraftingInterface.hpp
    StarErrorScreen.hpp
    StarGraphicsMenu.hpp
    StarInventory.hpp
    StarInterfaceCursor.hpp
    StarInterfaceLuaBindings.hpp
    StarItemTooltip.hpp
    StarJoinRequestDialog.hpp
    StarKeybindingsMenu.hpp
    StarMainInterface.hpp
    StarMainInterfaceTypes.hpp
    StarMainMixer.hpp
    StarMerchantInterface.hpp
    StarModsMenu.hpp
    StarNameplatePainter.hpp
    StarOptionsMenu.hpp
    StarPopupInterface.hpp
    StarQuestIndicatorPainter.hpp
    StarQuestInterface.hpp
    StarQuestTracker.hpp
    StarRadioMessagePopup.hpp
    StarTeamBar.hpp
    StarTitleScreen.hpp
    StarScriptPane.hpp
    StarSimpleTooltip.hpp
    StarSongbookInterface.hpp
    StarStatusPane.hpp
    StarTeleportDialog.hpp
    StarWireInterface.hpp
  )

SET (star_frontend_SOURCES
    StarActionBar.cpp
    StarAiInterface.cpp
    StarBaseScriptPane.cpp
    StarBindingsMenu.cpp
    StarBookmarkInterface.cpp
    StarChat.cpp
    StarCharCreation.cpp
    StarCharSelection.cpp
    StarChatBubbleSeparation.cpp
    StarChatBubbleManager.cpp
    StarCinematic.cpp
    StarClientCommandProcessor.cpp
    StarCodexInterface.cpp
    StarConfirmationDialog.cpp
    StarContainerInterface.cpp
    StarContainerInteractor.cpp
    StarCraftingInterface.cpp
    StarErrorScreen.cpp
    StarGraphicsMenu.cpp
    StarInventory.cpp
    StarInterfaceCursor.cpp
    StarInterfaceLuaBindings.cpp
    StarItemTooltip.cpp
    StarJoinRequestDialog.cpp
    StarKeybindingsMenu.cpp
    StarMainInterface.cpp
    StarMainInterfaceTypes.cpp
    StarMainMixer.cpp
    StarMerchantInterface.cpp
    StarModsMenu.cpp
    StarNameplatePainter.cpp
    StarOptionsMenu.cpp
    StarPopupInterface.cpp
    StarQuestIndicatorPainter.cpp
    StarQuestInterface.cpp
    StarQuestTracker.cpp
    StarRadioMessagePopup.cpp
    StarTeamBar.cpp
    StarTitleScreen.cpp
    StarScriptPane.cpp
    StarSimpleTooltip.cpp
    StarSongbookInterface.cpp
    StarStatusPane.cpp
    StarTeleportDialog.cpp
    StarWireInterface.cpp
  )

ADD_LIBRARY (star_frontend OBJECT ${star_frontend_SOURCES} ${star_frontend_HEADERS})
TARGET_PRECOMPILE_HEADERS (star_frontend REUSE_FROM star_core)